# to_socket_addrs_timeout

./: Cargo.toml  README.md
src/: fallback.rs  lib.rs  linux_glibc.rs  windows.rs
