[package]
name = "to_socket_addrs_timeout"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.169"

[target.'cfg(windows)'.dependencies.windows]
version = "0.59.0"
default-features = false
features = ["std", "Win32_System_Threading", "Win32_Security", "Win32_Networking_WinSock", "Win32_System_IO"]

[target.'cfg(windows)'.dependencies]
windows-core = "0.59.0"
